added all code but cant get mongo to populate data

--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -1,9 +1,9 @@
 <nav>
-    <div class="nav-wrapper topnav indigo">
-        <a href="/" class="brand-logo center">Scraper News Network</a>
+    <div class="nav-wrapper topnav green">
+        <a href="/" class="brand-logo center">Top News Scraping Network</a>
         <ul class="right" id="nav-mobile">
             <li><a href="/scrape">Scrape</a></li>
-            <li><a href="https://github.com/vivgarcia/web-scraper">GitHub Repo</a></li>
+            <li><a href="https://github.com/dcoleslaw86/web_news_scraper">GitHub Repo</a></li>
         </ul>
     </div>
 </nav>
