--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,15 +8,13 @@
 </div>
 
 <div class="row">
-    <div class="col">
-        <div class="col left-align">
+    <div class="col s2">
+        <div class="col s8 left-align">
             {{#each article}}
-
                 <div class="card-panel">
                     <h4>{{this.title}}</h4>
-                    <a href="/readArticle/{{ this._id }}" class="waves-effect waves-light btn indigo" id="btnSignUp">Read Article</a>
+                    <a href="/readArticle/{{this._id}}" class="waves-effect waves-light btn green" id="btnSignUp">Read Article</a>
                 </div>
-
             {{/each}}
         </div>
     </div>
