--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,29 +2,26 @@
 <html lang="en">
 
 <head>
-    <!-- Compiled and minified CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-    {{!-- Materialize Icons --}}
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
-    <title>MongoDB News Scraper</title>
+    {{!-- <link rel="stylesheet" href="../public/css/stlye.css"> --}}
+
+    <title>MongoDB News Scraper Web App</title>
 </head>
 
 <body>
-
     {{> nav/navbar}}
-
     <main>
         <div class="container">
             {{{ body }}}
         </div>
     </main>
-
     {{> footer}}
 
-    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 </body>
 <html>
