finsihed code, but popping up with error

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,23 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    {{!-- Materialize Icons --}}
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    {{!-- <link rel="stylesheet" href="../public/css/stlye.css"> --}}
+    <link rel="stylesheet" href="/assets/css/style.css">
+    {{!-- Google Font --}}
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <!-- tab icon -->
+    <link rel="shortcut icon" href="assets/img/news-icon.png" />
 
     <title>MongoDB News Scraper Web App</title>
 </head>
 
 <body>
+
     {{> nav/navbar}}
+
     <main>
         <div class="container">
             {{{ body }}}
         </div>
     </main>
+
     {{> footer}}
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 </body>
 <html>
