--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -3,6 +3,7 @@
         <a href="/" class="brand-logo center">Top News Scraping Network</a>
         <ul class="right" id="nav-mobile">
             <li><a href="/scrape">Scrape</a></li>
+            <li><a href="/clearall">Clear Articles</a></li>
             <li><a href="https://github.com/dcoleslaw86/web_news_scraper">GitHub Repo</a></li>
         </ul>
     </div>
